--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,7 +41,16 @@
 
     --ring: 215 17% 40%;
     --radius: 0.75rem;
+    --sidebar-background: 240 5.9% 10%;
+    --sidebar-foreground: 240 4.8% 95.9%;
+    --sidebar-primary: 224.3 76.3% 48%;
+    --sidebar-primary-foreground: 0 0% 100%;
+    --sidebar-accent: 240 3.7% 15.9%;
+    --sidebar-accent-foreground: 240 4.8% 95.9%;
+    --sidebar-border: 240 3.7% 15.9%;
+    --sidebar-ring: 217.2 91.2% 59.8%;
   }
+
 }
 
 .gradient-background {
@@ -56,4 +65,8 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.bg-about {
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)) url('/public/about.jpg');
 }
